--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CMS</title>
+    <title>Bygge Kirke</title>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@3.9.0/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@3.8.2/dist/decap-cms.js"></script>
   </body>
 </html>
