--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Bygge Kirke</title>
+      <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
   </head>
   <body>
     <script src="https://unpkg.com/decap-cms@3.8.2/dist/decap-cms.js"></script>
